# bevy_particle_systems

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
assets/shaders/: instancing.wgsl  particle_billboard.wgsl
examples/: basic.rs  directional.rs  drag.rs  local_space.rs  oneshot.rs  particles_3d.rs  shape_emitter.rs  texture_atlas.rs  time_scaling.rs  velocity_modifiers.rs
src/: components.rs  lib.rs  plugin.rs  render.rs  systems.rs  values.rs
