[package]
name = "bevy_particle_systems"
version = "0.12.0"
edition = "2021"
rust-version = "1.76"
authors = ["Abnormal Brain Studios"]
license = "MIT"
description = "A particle system plugin for Bevy"
repository = "https://github.com/abnormalbrain/bevy_particle_systems"
keywords = ["game", "gamedev", "bevy"]
categories = ["game-development"]

[profile.release]
debug = true

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "local_space"
path = "examples/local_space.rs"

[[example]]
name = "shape_emitter"
path = "examples/shape_emitter.rs"

[[example]]
name = "time_scaling"
path = "examples/time_scaling.rs"

[[example]]
name = "directional"
path = "examples/directional.rs"

[[example]]
name = "oneshot"
path = "examples/oneshot.rs"

[[example]]
name = "texture_atlas"
path = "examples/texture_atlas.rs"

[[example]]
name = "velocity_modifiers"
path = "examples/velocity_modifiers.rs"


[dependencies]
bevy_app = "0.13"
bevy_asset = "0.13"
bevy_ecs = "0.13"
bevy_hierarchy = "0.13"
bevy_math = "0.13"
bevy_render = "0.13"
bevy_sprite = "0.13"
bevy_time = "0.13"
bevy_transform = "0.13"
bevy_reflect = "0.13"
rand = "0.8"

[dev-dependencies]
bevy = { version = "0.13", default-features=false, features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_core_pipeline",
    "png",
    "bevy_winit",
    "x11"
] }
approx = "0.5"
