[package]
name = "bevy_particle_systems"
version = "0.13.0"
edition = "2021"
rust-version = "1.79"
authors = ["Abnormal Brain Studios"]
license = "MIT"
description = "A particle system plugin for Bevy"
repository = "https://github.com/abnormalbrain/bevy_particle_systems"
keywords = ["game", "gamedev", "bevy"]
categories = ["game-development"]

[profile.release]
debug = true

[dependencies]
bevy_app = "0.14"
bevy_asset = "0.14"
bevy_ecs = "0.14"
bevy_hierarchy = "0.14"
bevy_math = "0.14"
bevy_render = "0.14"
bevy_color = "0.14"
bevy_sprite = "0.14"
bevy_time = "0.14"
bevy_transform = "0.14"
bevy_reflect = "0.14"
rand = "0.8"

[dev-dependencies]
bevy = { version = "0.14", default-features=false, features = [
    "bevy_asset",
    "bevy_sprite",
    "bevy_core_pipeline",
    "png",
    "bevy_winit",
    "x11"
] }
approx = "0.5"
